--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ mybatis.mapper-locations=classpath:/mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
 #Path
-bookstore.path.upload=C:\\Users\\73140\\IdeaProjects\\community\\RiskTool\\src\\main\\resources\\static\\img
+bookstore.path.upload=C:\\Users\\73140\\IdeaProjects\\community\\Bookstore\\frontend\\src\\images
 
 spring.web.resources.static-locations=classpath:/static/
