--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ mybatis.configuration.map-underscore-to-camel-case=true
 bookstore.path.upload=C:\\Users\\73140\\IdeaProjects\\community\\Bookstore\\frontend\\src\\images
 
 spring.web.resources.static-locations=classpath:/static/
+
+#reCaptcha
+recaptcha.secret.key=6LdedycqAAAAAMahfiuxfmc2YPR73n7-a2cRXpBy
